adding pg gem for heroku

--- a/config/database.yml
+++ b/config/database.yml
@@ -22,8 +22,8 @@ test:
   pool: 5
   timeout: 5000
 
-# production:
-#   adapter: sqlite3
-#   database: db/production.sqlite3
-#   pool: 5
-#   timeout: 5000
+production:
+  adapter: mysql
+  database: interview_prod
+  username: root
+  password: 
